my second websit login website

--- a/forcss1.html
+++ b/forcss1.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Perfumy</title>
+    <link rel="stylesheet" href="forcss2.css">
+</head>
+<body>
+    <div class="h">
+        <h1>Perfumey</h1>
+        <ul>
+            <li>Home</li>
+            <li>Prducts</li>
+            <li>Contact Us</li>
+        </ul>
+    </div>6
+    <div class="s"></div>
+    <div class="p"></div>
+    <div class="end"></div>
+    
+</body>
+</html>
