my second websit login website

--- a/forcss1.html
+++ b/forcss1.html
@@ -53,8 +53,13 @@
         
     </div>
     <div class="end2">
-        <h2>Contact Us</h2>
+        <br>
+        <h2>Contact Us</h2><br>
         <h3>+91 123456789</h3>
+        <br><br>
+        <p style="color: grey;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, nisi explicabo, eos provident labore dicta excepturi similique maxime, ad recusandae sit unde assumenda eveniet adipisci tenetur omnis! Aliquam pariatur facilis, veritatis cumque et repellat ad quod in magnam libero suscipit natus distinctio iusto nostrum, neque sint at, eum sequi ex voluptates. Modi, explicabo accusantium aliquid iusto repellat, iste, repellendus eum nesciunt repudiandae aut atque alias facilis mollitia molestiae quisquam? Libero velit aliquam sint autem quo temporibus, eligendi nihil consectetur culpa. Nobis, ex aperiam! Numquam dignissimos architecto temporibus rem, impedit quia adipisci incidunt eius. Quam nobis ea expedita ullam odit quo nesciunt, nihil eveniet animi tempore illum nostrum asperiores. Optio a aut, nostrum praesentium asperiores eos aliquid aliquam iste mollitia rerum inventore modi repudiandae est similique facere perferendis sit excepturi laborum dolorem dolores numquam! Molestiae laborum asperiores officia vero accusantium, veniam culpa dolores possimus quasi perspiciatis impedit, tempora nam nulla laudantium placeat cumque iure voluptatibus voluptatem. Autem cum quidem esse voluptatum tempora inventore reprehenderit, eaque facilis! Aperiam reprehenderit nemo autem veniam molestiae eius iusto at laborum doloribus, neque dicta quas harum alias laudantium officia enim? Ipsum ipsa, autem, quas dicta cum corporis architecto deleniti libero quaerat necessitatibus, nesciunt porro nobis at laudantium delectus ad hic magni repudiandae exercitationem voluptates a quasi adipisci culpa veniam? Sequi voluptate, perferendis quos consequatur est natus impedit doloremque recusandae, ex eius rerum debitis accusantium quas obcaecati esse velit repellat laborum quam. Vel aspernatur natus sunt tempora velit inventore itaque et, aut adipisci officia consequatur blanditiis dolorum fugit. Dolores, itaque quam similique perferendis eius beatae error alias quo veritatis dolorem autem ipsam! Esse provident quod quis fuga fugiat accusantium nesciunt numquam non. Fugiat a ipsum eius inventore temporibus, animi provident quod voluptas quaerat cupiditate earum cum corporis ex quisquam nemo dolores iusto voluptates perspiciatis est, laudantium eligendi.
+
+        </p>
     </div>
     
 </body>
